--- a/News/Application/Support/Info.plist
+++ b/News/Application/Support/Info.plist
@@ -2,6 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SF-Display-Black.ttf</string>
+		<string>SF-Display-Bold.ttf</string>
+		<string>SF-Display-Heavy.ttf</string>
+		<string>SF-Display-Light.ttf</string>
+		<string>SF-Display-Medium.ttf</string>
+		<string>SF-Display-Regular.ttf</string>
+		<string>SF-Display-Semibold.ttf</string>
+		<string>SF-Text-Bold.ttf</string>
+		<string>SF-Text-BoldItalic.ttf</string>
+		<string>SF-Text-RegularItalic.ttf</string>
+		<string>SF-Text-Medium.ttf</string>
+		<string>SF-Text-Regular.ttf</string>
+		<string>SF-Text-Semibold.ttf</string>
+		<string>SF-Text-Heavy.ttf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
